1. Hourly report added. 2. Report border black line in nav bar issue fixed 3. Report extra space in nav bar issue fixed

--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -69,3 +69,9 @@
 .dashboard-table, .dashboard-table th, .dashboard-table td{
     border:1px solid;
 }
+.nav-up{
+    margin-top:-25px;
+}
+.nav-border-remove{
+    box-shadow: none;
+}
